--- a/Client/partials/addevent.html
+++ b/Client/partials/addevent.html
@@ -22,78 +22,95 @@
             <textarea class="form-control" id="event-description" ng-model="vm.description" placeholder="Inserisci testo" rows="4" required></textarea>
           </fieldset>
 
-          <fieldset class="clearfix col-md-12" style="padding:0px;">
-            <legend style="padding-left:15px;">Place</legend>
-            <fieldset class="form-group col-md-12">
-              <label >Nome posto</label>
-              <input type="text" class="form-control" id="" ng-model="vm.place" placeholder="Nome" required>
-            </fieldset>
-
-            <fieldset class="form-group col-md-12">
-              <label >Indirizzo</label>
-              <input ng-model="vm.address" class="form-control" placeholder="Indirizzo" required>
-            </fieldset>
-
-            <fieldset class="form-group col-md-6">
-              <label >Città</label>
-              <input ng-model="vm.city" type="text" class="form-control col-md-6" id="" placeholder="Città" required>
-            </fieldset>
-
-            <fieldset class="form-group col-md-6">
-              <label >Cap</label>
-              <input type="text" class="form-control" ng-model="vm.zip" id="" placeholder="Cap" required>
-            </fieldset>
-
-            <fieldset class="form-group col-md-12">
-              <label >Paese</label>
-              <input type="text" class="form-control" ng-model="vm.country" id="" placeholder="Nation" required>
-            </fieldset>
+          <fieldset class="form-group col-md-6">
+            <label>Data inizio</label>
+            <input type="date" class="form-control" ng-model="vm.dataStart" id="" placeholder="Data" required>
           </fieldset>
+        </fieldset>
 
+        <fieldset class="form-group col-md-6">
+          <label>Data fine</label>
+          <input type="date" class="form-control" ng-model="vm.dataEnd" id="" placeholder="Data" required>
+        </fieldset>
+      </fieldset>
 
-          <fieldset class="form-group col-md-12">
-            <label>Categoria</label>
-            <select class="c-select" ng-model="vm.category" required>
-              <option value="1">Sport</option>
-              <option value="2">Meeting</option>
-              <option value="3">Workshop</option>
-              <option value="3">Altro</option>
-            </select>
-          </fieldset>
-          <fieldset class="col-md-12 clearfix">
-            start + stop ?
-          </fieldset>
+      <fieldset class="clearfix col-md-12" style="padding:0px;">
+        <legend style="padding-left:15px;">Place</legend>
+        <fieldset class="form-group col-md-12">
+          <label >Nome posto</label>
+          <input type="text" class="form-control" id="" ng-model="vm.place" placeholder="Nome" required>
+        </fieldset>
 
-          <div class="col-md-12 clearfix">
-            <button class="btn btn-primary" ng-click="toggleCustom()">Invita</button>
-            <button type="button" ng-disabled="myForm.$invalid" ng-click="createEvent(vm)" class="btn btn-primary">Crea evento</button>
-          </div>
+        <fieldset class="form-group col-md-12">
+          <label >Indirizzo</label>
+          <input ng-model="vm.address" class="form-control" placeholder="Indirizzo" required>
+        </fieldset>
 
-        </form>
-      </div>
+        <fieldset class="form-group col-md-6">
+          <label >Città</label>
+          <input ng-model="vm.city" type="text" class="form-control col-md-6" id="" placeholder="Città" required>
+        </fieldset>
 
-    </div>
-    <div class="col-md-12 overlay" ng-hide="custom" >
-      <div class="col-md-6 overlay-box">
-        <h1>Aggiugni invitati</h1>
+        <fieldset class="form-group col-md-6">
+          <label>Cap</label>
+          <input type="text" class="form-control" ng-model="vm.zip" id="" placeholder="Cap" required>
+        </fieldset>
 
-        <div class="input-group">
-          <input type="text" class="form-control" placeholder="Search for...">
-            <span class="input-group-btn">
-              <button class="btn btn-default" type="button">Go!</button>
-            </span>
-        </div>
-        <div class="search-results">
+        <fieldset class="form-group col-md-12">
+          <label>Paese</label>
+          <input type="text" class="form-control" ng-model="vm.country" id="" placeholder="Nation" required>
+        </fieldset>
+      </fieldset>
 
-        </div>
+      <fieldset class="form-group col-md-12">
+        <label>Categoria</label>
+        <select class="c-select" ng-model="vm.category" required>
+          <option value="1">Sport</option>
+          <option value="2">Meeting</option>
+          <option value="3">Workshop</option>
+          <option value="3">Altro</option>
+        </select>
+      </fieldset>
+      <fieldset class="col-md-12 clearfix">
+        start + stop ?
+      </fieldset>
 
-        <h4>Persone che hai invitato</h4>
-        <div class="invited-list">
-            nessuno
-        </div>
+      <div class="col-md-12 clearfix">
         <button class="btn btn-primary" ng-click="toggleCustom()">Invita</button>
+        <button type="button" ng-disabled="myForm.$invalid" ng-click="createEvent(vm)" class="btn btn-primary">Crea evento</button>
       </div>
-    </div>
 
+    </form>
   </div>
+
+</div>
+<div class="col-md-12 overlay" ng-hide="custom">
+  <div class="col-md-6 overlay-box">
+    <h1>Aggiugni invitati</h1>
+
+    <fieldset class="form-group col-md-12">
+      <label>Gruppi</label>
+      <select class="c-select" ng-model="vm.groups">
+        <option ng-repeat="gruppo in gruppi" value="{{gruppo.id}}">{{gruppo.nome}}</option>
+      </select>
+    </fieldset>
+    <!-- <div class="input-group">
+    <input type="text" class="form-control" placeholder="Search for...">
+    <span class="input-group-btn">
+    <button class="btn btn-default" type="button">Go!</button>
+  </span>
+</div>-->
+<div class="search-results">
+
+</div>
+<!--
+<h4>Persone che hai invitato</h4>
+<div class="invited-list">
+  nessuno
+</div>-->
+<button class="btn btn-warning" ng-click="toggleCustom()">CHIUDI</button>
+</div>
+</div>
+
+</div>
 </div>
