--- a/Client/partials/events.html
+++ b/Client/partials/events.html
@@ -22,13 +22,13 @@
         <div class="pill-content" ng-show="eventsNavbar">
           <div class="pill-pane active" id="near">
 
-            <div class="media clearfix doc-thumb-container" ng-repeat="eventoVicino in eventiVicini">
+            <div class="media clearfix doc-thumb-container" ng-repeat="evento in eventiVicini">
               <div class="pull-left media-top">
                 <img class="media-object mg-responsive doc-img" src="css/img/place.png" alt="...">
               </div>
               <div class="" ng-click="gotoEvent()">
-                <h4 class="">eventoVicino.name</h4>
-                <p class="small">eventoVicino.description</p>
+                <h4 class="">{{evento.eventName}}</h4>
+                <p class="small">{{evento.eventDesc}}</p>
               </div>
             </div>
 
@@ -39,13 +39,13 @@
         <div class="pill-content" ng-hide="eventsNavbar" style="overflow: scroll; height: 90%;">
           <div class="pill-pane active" id="joined">
 
-            <div class="media clearfix doc-thumb-container" ng-repeat="eventoPartecipo in eventiPartecipo">
+            <div class="media clearfix doc-thumb-container" ng-repeat="evento in eventiPartecipo">
               <div class="pull-left media-top">
                 <img class="media-object mg-responsive doc-img" src="css/img/place.png" alt="...">
               </div>
               <div class="" ng-click="gotoEvent()">
-                <h4 class="">eventoPartecipo.name</h4>
-                <p class="small">eventoPartecipo.description</p>
+                <h4 class="">evento.name</h4>
+                <p class="small">evento.description</p>
               </div>
             </div>
 
@@ -78,7 +78,7 @@
              <info-window id="bar" max-width="300">
               <div ng-non-bindable>
                 <div class="col-md-12">
-                  <h2>{{evento.name}}</h2>
+                  <h2>{{evento.eventName}}</h2>
                   <p><strong>Category: </strong>
                     <span class="label label-primary tags">{{evento.category}}</span>
                   </p>
