--- a/Client/partials/events.html
+++ b/Client/partials/events.html
@@ -28,7 +28,8 @@
               </div>
               <div class="" ng-click="gotoEvent(eventoV.eventId)">
                 <h4 class="">{{eventoV.eventName}}</h4>
-                <p class="small">{{eventoV.eventDesc}}</p>
+                <p class="small">{{eventoV.eventDesc}}<br>
+                {{eventoV.placeLng}}</p>
               </div>
             </div>
 
@@ -68,32 +69,32 @@
       <div class="row">
         <!--<div id="map-canvas" class="col-md-12"></div>-->
         <div map-lazy-load="https://maps.google.com/maps/api/js">
-          <ng-map default-style="true" center="44.494907, 11.326638" zoom="13">
-            <marker position="44.501482, 11.330802" title="Hello World!" on-click="gotoEvent()"></marker>
-            <marker position="44.494907, 11.326638" title="Hello World!" on-click="gotoEvent()"></marker>
+          <ng-map default-style="true" center="{{latitudine}}, {{longitudine}}" zoom="12">
+            <!-- <marker position="44.501482, 11.330802" title="Hello World!" on-click="gotoEvent()"></marker>
+            <marker position="44.494907, 11.326638" title="Hello World!" on-click="gotoEvent()"></marker> -->
             <!--<marker position="44.4972646,11.3471621" title="Hello World!"></marker>-->
-            <marker id="foo" position="44.4972646,11.3471621"
-                    on-click="map.showInfoWindow(event, 'bar')">
+            <marker ng-repeat="eventoVic in eventiVicini" position="{{eventoVic.placeLat}}, {{eventoVic.placeLng}}"
+                    on-click="map.showInfoWindow(event, '{{eventoVic.eventId}}')">
             </marker>
-             <info-window id="bar" max-width="300">
+             <info-window ng-repeat="evento in eventiVicini" id="{{evento.eventId}}" max-width="300">
               <div ng-non-bindable>
                 <div class="col-md-12">
                   <h2>{{evento.eventName}}</h2>
                   <p><strong>Category: </strong>
-                    <span class="label label-primary tags">{{evento.category}}</span>
+                    <span class="label label-primary tags">...</span>
                   </p>
-                  <p><i>Creator: {{evento.creator}}, {{evento.creationdate}}</i></p>
+                  <p><i>Creator: {{evento.creatorName}} {{evento.creatorLastname}}, {{evento.dateCreation}}</i></p>
                   <h3>Description</h3>
-                  <p>{{evento.description}}</p>
-                  <span><b>Start:</b> {{evento.startdate}}</span>
-                  <span><b>Stop:</b> {{evento.stopdate}}</span>
+                  <p>{{evento.eventDesc}}</p>
+                  <span><b>Start:</b> {{evento.dateStart}}</span>
+                  <span><b>Stop:</b> {{evento.dateStop}}</span>
                 </div>
 
                 <div class="row-fluid">
                   <div class="col-md-12">
                     <div class="col-md-12">
                       <br>
-                      <button ng-click="gotoEvent()" class="btn">View event <span class="glyphicon glyphicon-share"></span></button>
+                      <button ng-click="gotoEvent(evento.eventId)" class="btn">View event <span class="glyphicon glyphicon-share"></span></button>
                     </div>
 
                   </div>
