--- a/Client/partials/events.html
+++ b/Client/partials/events.html
@@ -10,9 +10,9 @@
       <div class="row " style="margin:0px;">
         <div class="input-group">
           <input type="text" class="form-control" placeholder="Search for...">
-              <span class="input-group-btn">
-                <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-search"></span></button>
-              </span>
+          <span class="input-group-btn">
+            <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-search"></span></button>
+          </span>
         </div><!-- /input-group -->
       </div>
 
@@ -29,83 +29,74 @@
               <div class="" ng-click="gotoEvent(eventoV.eventId)">
                 <h4 class="">{{eventoV.eventName}}</h4>
                 <p class="small">{{eventoV.eventDesc}}<br>
-                {{eventoV.placeLng}}</p>
+                  {{eventoV.placeLng}}</p>
+                </div>
               </div>
+
+            </div>
+          </div>
+
+          <!--TAB 2-->
+          <div class="pill-content" ng-hide="eventsNavbar" style="overflow: scroll; height: 90%;">
+            <div class="pill-pane active" id="joined">
+
+              <div class="media clearfix doc-thumb-container" ng-repeat="eventoP in eventiPartecipo">
+                <div class="pull-left media-top">
+                  <img class="media-object mg-responsive doc-img" src="css/img/place.png" alt="...">
+                </div>
+                <div class="" ng-click="gotoEvent(eventoP.eventId)">
+                  <h4 class="">eventoP.name</h4>
+                  <p class="small">eventoP.description</p>
+                </div>
+              </div>
+
+
+
             </div>
 
           </div>
-        </div>
-
-        <!--TAB 2-->
-        <div class="pill-content" ng-hide="eventsNavbar" style="overflow: scroll; height: 90%;">
-          <div class="pill-pane active" id="joined">
-
-            <div class="media clearfix doc-thumb-container" ng-repeat="eventoP in eventiPartecipo">
-              <div class="pull-left media-top">
-                <img class="media-object mg-responsive doc-img" src="css/img/place.png" alt="...">
-              </div>
-              <div class="" ng-click="gotoEvent(eventoP.eventId)">
-                <h4 class="">eventoP.name</h4>
-                <p class="small">eventoP.description</p>
-              </div>
-            </div>
 
 
 
-          </div>
 
+          <!--STOP REPLACE-->
         </div>
 
 
-
-
-        <!--STOP REPLACE-->
       </div>
 
-
-    </div>
-
-    <div class="col-md-9 main-content" ng-init="init()">
-      <div class="row">
-        <!--<div id="map-canvas" class="col-md-12"></div>-->
-        <div map-lazy-load="https://maps.google.com/maps/api/js">
-          <ng-map default-style="true" center="{{latitudine}}, {{longitudine}}" zoom="12">
-            <!-- <marker position="44.501482, 11.330802" title="Hello World!" on-click="gotoEvent()"></marker>
-            <marker position="44.494907, 11.326638" title="Hello World!" on-click="gotoEvent()"></marker> -->
-            <!--<marker position="44.4972646,11.3471621" title="Hello World!"></marker>-->
-            <marker ng-repeat="eventoVic in eventiVicini" position="{{eventoVic.placeLat}}, {{eventoVic.placeLng}}"
-                    on-click="map.showInfoWindow(event, '{{eventoVic.eventId}}')">
-            </marker>
-             <info-window ng-repeat="evento in eventiVicini" id="{{evento.eventId}}" max-width="300">
-              <div ng-non-bindable>
-                <div class="col-md-12">
-                  <h2>{{evento.eventName}}</h2>
-                  <p><strong>Category: </strong>
-                    <span class="label label-primary tags">...</span>
-                  </p>
-                  <p><i>Creator: {{evento.creatorName}} {{evento.creatorLastname}}, {{evento.dateCreation}}</i></p>
-                  <h3>Description</h3>
-                  <p>{{evento.eventDesc}}</p>
-                  <span><b>Start:</b> {{evento.dateStart}}</span>
-                  <span><b>Stop:</b> {{evento.dateStop}}</span>
-                </div>
-
-                <div class="row-fluid">
+      <div class="col-md-9 main-content" ng-init="init()">
+        <div class="row">
+          <div map-lazy-load="https://maps.google.com/maps/api/js">
+            <ng-map default-style="true" center="{{latitudine}}, {{longitudine}}" zoom="12">
+              <info-window id="infoW" class="ng-scope" max-width="300">
+                <div ng-non-bindable>
                   <div class="col-md-12">
+                    <h2>{{eventoVic.eventName}}</h2>
+                    <p><strong>Category: </strong>
+                      <span class="label label-primary tags">...</span>
+                    </p>
+                    <p><i>Creator: {{eventoVic.creatorName}} {{eventoVic.creatorLastname}}, {{eventoVic.dateCreation}}</i></p>
+                    <h3>Description</h3>
+                    <p>{{eventoVic.eventDesc}}</p>
+                    <span><b>Start:</b> {{eventoVic.dateStart}}</span>
+                    <span><b>Stop:</b> {{eventoVic.dateStop}}</span>
+                  </div>
+                  <div class="row-fluid">
                     <div class="col-md-12">
                       <br>
-                      <button ng-click="gotoEvent(evento.eventId)" class="btn">View event <span class="glyphicon glyphicon-share"></span></button>
+                      <button ng-click="gotoEvent(eventoVic.eventId)" class="btn">View event <span class="glyphicon glyphicon-share"></span></button>
                     </div>
-
                   </div>
                 </div>
+              </info-window>
 
-              </div>
-            </info-window>
-          </ng-map>
+              <marker ng-repeat="eventoVic in eventiVicini" position="{{eventoVic.placeLat}}, {{eventoVic.placeLng}}" clickable="true" id="{{eventoVic.eventId}}" draggable="false" on-click="detail(event, eventoVic)">
+              </marker>
+            </ng-map>
+          </div>
         </div>
+        <script type="text/javascript" src="js/map.js"></script>
       </div>
-      <script type="text/javascript" src="js/map.js"></script>
     </div>
   </div>
-</div>
